--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="infoLayer"></div>
     </div>
 
-    <h1>Our partners</h1>
+    <p class="subtitle"><strong class="green">Our partners</strong> In a nutshell</p>
 
     <svg
       version="1.1"
