Add server script and support for IE11

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Our partners over the world</title>
   </head>
   <body>
     <div class="map">
-      <img src="./assets/map.svg" alt="world map" />
+      <img src="assets/map.svg" alt="world map" />
       <div class="pinsLayer"></div>
       <div class="infoLayer"></div>
       <div class="cityLayer"></div>
@@ -56,6 +56,9 @@
       </g>
     </svg>
 
-    <script src="./script.js"></script>
+    <script src="js/babel.js"></script>
+    <script src="js/fetch.js"></script>
+    <script src="js/promise.min.js"></script>
+    <script src="js/script.js" type="text/babel"></script>
   </body>
 </html>
